Added CS and more content

--- a/about_me.html
+++ b/about_me.html
@@ -8,9 +8,16 @@
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   </head>
   <body>
+    <header>
+      <img src="img/thardy-long.svg" alt="THardy logo">
+    </header>
     <nav>
-      
+      <a href="index.html">Home Page</a>
+      <a href="#">About Me</a>
+      <a href="projects.html">My Projects</a>
     </nav>
+    <section>
+     
+    </section>
   </body>
 </html>
-
