--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   </head>
   <body>
-    <header>
+    <header class="header">
       <img src="img/thardy-long.svg" alt="THardy logo">
     </header>
-    <nav>
-      <a href="index.html">Home Page</a>
-      <a href="aboutMe.html">About Me</a>
-      <a href="#">My Projects</a>
+    <nav class="navbar is-link">
+      <a href="#" class="navbar-item">Home Page</a>
+      <a href="aboutMe.html" class="navbar-item">About Me</a>
+      <a href="projects.html" class="navbar-item">My Projects</a>
     </nav>
-    <section>
+    <section class="section">
+      <h1>Hi, Im Timothy</h1>
+      <p>I am a young developer who is just getting started in the wide world of Programming, Web design and scripting</p>
     </section>
   </body>
 </html>
+
